Header with text complete
- Still need to add picture and black design background

--- a/index.html
+++ b/index.html
@@ -11,17 +11,24 @@
 
 </head>
 
-    <header>
-        <nav class="head">
-                <img class="Ibra" src="Resources/Images/5.png" alt="Ibra's Burgers and Grill">
-                <a class="current" href="">INICIO</a>
-                <a href="">SOBRE NOSOTROS</a>
-                <a href="">MENU</a>
-                <a href="">BLOG</a>
-                <a href="">CONTACTO</a>
-                <a href="">REGISTRO</a>
-                <a href="">INICIAR SESSION</a>
-        </nav>
+    <header>   
+        <table class = "header">
+            <tr>
+                <td><img class="Ibra" src="Resources/Images/5.png" alt="Ibra's Burgers and Grill"></td>
+
+                <td>
+                    <nav class="head">
+                        <li><a class="current" href="">INICIO</a></li>
+                        <li><a href="">SOBRE NOSOTROS</a></li>
+                        <li><a href="">MENU</a></li>
+                        <li><a href="">BLOG</a></li>
+                        <li><a href="">CONTACTO</a></li>
+                        <li><a href="">REGISTRO</a></li>
+                        <li><a href="">INICIAR SESSION</a></li>
+                    </nav>
+                </td>
+            </tr>
+        </table>
     </header>    
 
 <body>  
