Added Triangles to header

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
                         </td>
                     </tr>
                 </table>
-                
-        </header>   
+        </header>
+        <div class="Image">
+        </div>                 
     </div> 
 </body>
 </html>
