--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                     </tr>
                 </table>
         </header>
-        <div class="Image">
-        </div>                 
-    </div> 
+        <div class="TopTriangle">
+        </div>  
+        <div class="BottomTriangle">
+        </div>               
+    </div>   
 </body>
 </html>
