Started About Us Page

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -6,8 +6,7 @@
 
   <title>Home Page</title>
 
-  
-  <link rel="stylesheet" type="text/css" href="Resources/CSS/index.css">
+  <link rel="stylesheet" type="text/css" href="Resources/CSS/AboutUs.css">
   <link rel="stylesheet" type="text/css" href="Resources/CSS/ciudad.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 
@@ -21,8 +20,8 @@
                         <td><img class="Ibra" src="Resources/Images/5.png" alt="Ibra's Logo"></td>
                         <td>
                             <nav class="head">
-                                <li><a class="current" href="">INICIO</a></li>
-                                <li><a href="AboutUs.html">SOBRE NOSOTROS</a></li>
+                                <li><a href="">INICIO</a></li>
+                                <li><a class="current" href="">SOBRE NOSOTROS</a></li>
                                 <li><a href="">MENU</a></li>
                                 <li><a href="">BLOG</a></li>
                                 <li><a href="">CONTACTO</a></li>
@@ -35,7 +34,6 @@
         </header>
         <div class="TopTriangle">
         </div>  
-        <h1>LAS MEJORES DE LA CIUDAD</h1>
         <div class="BottomTriangle">
         </div>               
     </div>   
