Added the Contact and Menu Pages
- However they are blank still

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -20,11 +20,11 @@
                         <td><img class="Ibra" src="Resources/Images/5.png" alt="Ibra's Logo"></td>
                         <td>
                             <nav class="head">
-                                <li><a href="">INICIO</a></li>
-                                <li><a class="current" href="">SOBRE NOSOTROS</a></li>
-                                <li><a href="">MENU</a></li>
+                                <li><a href="index.html">INICIO</a></li>
+                                <li><a class="current" href="AboutUs.html">SOBRE NOSOTROS</a></li>
+                                <li><a href="Menu.html">MENU</a></li>
                                 <li><a href="">BLOG</a></li>
-                                <li><a href="">CONTACTO</a></li>
+                                <li><a href="Contact.html">CONTACTO</a></li>
                                 <li><a href="">REGISTRO</a></li>
                                 <li><a href="">INICIAR SESSION</a></li>
                             </nav>
