--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <td><img class="Ibra" src="Resources/Images/5.png" alt="Ibra's Logo"></td>
                         <td>
                             <nav class="head">
-                                <li><a class="current" href="">INICIO</a></li>
+                                <li><a class="current" href="index.html">INICIO</a></li>
                                 <li><a href="AboutUs.html">SOBRE NOSOTROS</a></li>
                                 <li><a href="">MENU</a></li>
                                 <li><a href="">BLOG</a></li>
