--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                             <nav class="head">
                                 <li><a class="current" href="index.html">INICIO</a></li>
                                 <li><a href="AboutUs.html">SOBRE NOSOTROS</a></li>
-                                <li><a href="">MENU</a></li>
+                                <li><a href="Menu.html">MENU</a></li>
                                 <li><a href="">BLOG</a></li>
-                                <li><a href="">CONTACTO</a></li>
+                                <li><a href="Contact.html">CONTACTO</a></li>
                                 <li><a href="">REGISTRO</a></li>
                                 <li><a href="">INICIAR SESSION</a></li>
                             </nav>
