Added Special Text

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 
   <title>Home Page</title>
 
-  
-  <link rel="stylesheet" type="text/css" href="Resources/CSS/index.css">
   <link rel="stylesheet" type="text/css" href="Resources/CSS/ciudad.css">
+  <link rel="stylesheet" type="text/css" href="Resources/CSS/index.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 
 </head>
@@ -35,7 +34,8 @@
         </header>
         <div class="TopTriangle">
         </div>  
-        <h1>LAS MEJORES DE LA CIUDAD</h1>
+        <p>LAS MEJORES DE LA CIUDAD</p>
+        <h1>Hamburguesas</h1>
         <div class="BottomTriangle">
         </div>               
     </div>   
