Homepage top portion complete
- Moving onto text block

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
         </header>
         <div class="TopTriangle">
         </div>  
-        <p>LAS MEJORES DE LA CIUDAD</p>
+        <p class="top">LAS MEJORES DE LA CIUDAD</p>
+        
         <h1>Hamburguesas</h1>
+        <table class="menubutton"><tr><td><a href="Menu.html" class="menu_button">VER MENÚ HOY</a></td></tr></table>
         <div class="BottomTriangle">
         </div>               
     </div>   
