Heading background darken is good
- La mejor ciudad and hamburgers arent exactly in the right position though

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
         <table class="menubutton"><tr><td><a href="Menu.html" class="menu_button">VER MENÚ HOY</a></td></tr></table>
         <div class="BottomTriangle">
         </div>               
-    </div>   
+    </div>
+    <div style="display: inline-block; background-color: black; color: white; background-position: 0 -150px;">
+        <p>Nuestra historia
+            Los orígenes se remontan al 10 de junio de 1960, cuando Ibrahim Mata compraron la Hamburgueseria “Soy Yo” con una  inversión inicial de 950 dólares. El local estaba situado en Lecheria, y la idea de Ibrahim era vender Hamburguesas a domicilio a las personas de las residencias cercanas. Aquella experiencia no marchaba como tenían previsto.
+            
+            A pesar de todo, Ibrahim se mantuvo al frente del restaurante y tomó decisiones importantes para su futuro, como reducir la carta de productos y establecer un reparto a domicilio gratuito. Después de adquirir dos restaurantes más en Barcelona, en 1965 renombró sus tres locales como Ibra's Burger Grill.
+            </p>
+    </div>
 </body>
 </html>
