Add History Text to table
- Still need images on each side of history section

--- a/index.html
+++ b/index.html
@@ -42,11 +42,22 @@
         </div>               
     </div>
     <div style="display: inline-block; background-color: black; color: white; background-position: 0 -150px;">
-        <p>Nuestra historia
-            Los orígenes se remontan al 10 de junio de 1960, cuando Ibrahim Mata compraron la Hamburgueseria “Soy Yo” con una  inversión inicial de 950 dólares. El local estaba situado en Lecheria, y la idea de Ibrahim era vender Hamburguesas a domicilio a las personas de las residencias cercanas. Aquella experiencia no marchaba como tenían previsto.
-            
-            A pesar de todo, Ibrahim se mantuvo al frente del restaurante y tomó decisiones importantes para su futuro, como reducir la carta de productos y establecer un reparto a domicilio gratuito. Después de adquirir dos restaurantes más en Barcelona, en 1965 renombró sus tres locales como Ibra's Burger Grill.
-            </p>
+        <img class="TinyBurger" src="Resources/Images/Burguer.png" alt="Tiny Burger">
+        <h2>Nuestra historia</h2>
+        <table>
+            <tr>
+                <td>
+                    <p>
+                        Los orígenes se remontan al 10 de junio de 1960, cuando Ibrahim Mata compraron la Hamburgueseria “Soy Yo” con una  inversión inicial de 950 dólares. El local estaba situado en Lecheria, y la idea de Ibrahim era vender Hamburguesas a domicilio a las personas de las residencias cercanas. Aquella experiencia no marchaba como tenían previsto.
+                    </p>
+                </td>
+                <td>
+                    <p>
+                    A pesar de todo, Ibrahim se mantuvo al frente del restaurante y tomó decisiones importantes para su futuro, como reducir la carta de productos y establecer un reparto a domicilio gratuito. Después de adquirir dos restaurantes más en Barcelona, en 1965 renombró sus tres locales como Ibra's Burger Grill.
+                    </p>  
+                </td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
