History is basically done
- the left text should be intersecting the image but it isnt

--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
         <div class="BottomTriangle">
         </div>               
     </div>
-    <div style="display: inline-block; background-color: black; color: white; background-position: 0 -150px;">
+    <div class="History">
         <img class="TinyBurger" src="Resources/Images/Burguer.png" alt="Tiny Burger">
+        <img class="LeftPic" src="Resources/Images/story1.png" alt="Ibra's Logo">
+        <img class="RightPic" src="Resources/Images/story2.png" alt="Ibra's Logo">
         <h2>Nuestra historia</h2>
-        <table>
+        <table class="History">
             <tr>
                 <td>
                     <p>
@@ -53,11 +55,12 @@
                 </td>
                 <td>
                     <p>
-                    A pesar de todo, Ibrahim se mantuvo al frente del restaurante y tomó decisiones importantes para su futuro, como reducir la carta de productos y establecer un reparto a domicilio gratuito. Después de adquirir dos restaurantes más en Barcelona, en 1965 renombró sus tres locales como Ibra's Burger Grill.
+                        A pesar de todo, Ibrahim se mantuvo al frente del restaurante y tomó decisiones importantes para su futuro, como reducir la carta de productos y establecer un reparto a domicilio gratuito. Después de adquirir dos restaurantes más en Barcelona, en 1965 renombró sus tres locales como Ibra's Burger Grill.
                     </p>  
                 </td>
             </tr>
         </table>
     </div>
+    <div stlye="clear:LeftPic;clear:RightPic"></div>
 </body>
 </html>
