Base Most Sold Started
- Needs the table of most sold

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
             </tr>
         </table>
     </div>
-    <div stlye="clear:LeftPic;clear:RightPic"></div>
+    <div class="MostSold">
+        <img class="TinyBurger" src="Resources/Images/Burguer.png" alt="Tiny Burger">
+        <h2>Las más venididos</h2>
+    </div>
 </body>
 </html>
