First Menu Mostly Done
- Missing image tags on some of the burger pictures
- Not sure how to do that part....

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         
         <h1>Hamburguesas</h1>
         <table class="menubutton"><tr><td><a href="Menu.html" class="menu_button">VER MENÚ HOY</a></td></tr></table>
-        <div class="BottomTriangle">
-        </div>               
+        <div class="BottomTriangle"></div>               
     </div>
     <div class="History">
         <img class="TinyBurger" src="Resources/Images/Burguer.png" alt="Tiny Burger">
@@ -63,7 +62,63 @@
     </div>
     <div class="MostSold">
         <img class="TinyBurger" src="Resources/Images/Burguer.png" alt="Tiny Burger">
-        <h2>Las más venididos</h2>
+        <h2 class="MostSold">Las más venididos</h2>
+        <table class="MostSold">
+            <tr>
+                <td class="MostSold">
+                    <img class="Burgers" src="Resources/Images/burguer1.png" alt="Burger#1">
+                    <p class="Name">Mixta</p>
+                    <p class="Price">$11.90</p>
+                    <a href="Menu.html" class="menu_button_best menu_button_best2">Ordenar ahora</a>
+                </td>
+                <td class="MostSold">
+                    <img class="Burgers" src="Resources/Images/burguer2.png" alt="Burger#2">
+                    <p class="Name">Pollo</p>
+                    <p class="Price">$11.90</p>
+                    <a href="Menu.html" class="menu_button_best menu_button_best2">Ordenar ahora</a>
+                </td>
+                <td class="MostSold">
+                    <img class="Burgers" src="Resources/Images/burguer3.png" alt="Burger#3">
+                    <p class="Name">Carne</p>
+                    <p class="Price">$11.90</p>
+                    <a href="Menu.html" class="menu_button_best menu_button_best2">Ordenar ahora</a>
+                </td>
+                <td class="MostSold2">
+                    <img class="Burgers" src="Resources/Images/burguer1.png" alt="Burger#1">
+                    <p class="Name">Mixta</p>
+                    <p class="Price">$11.90</p>
+                    <a href="Menu.html" class="menu_button_best menu_button_best2">Ordenar ahora</a>
+                </td>
+            </tr>
+            <tr>
+                <td class="MostSold">
+                    <img class="Burgers" src="Resources/Images/burguer2.png" alt="Burger#2">
+                    <p class="Name">Pollo</p>
+                    <p class="Price">$11.90</p>
+                    <a href="Menu.html" class="menu_button_best menu_button_best2">Ordenar ahora</a>
+                </td>
+                <td class="MostSold">
+                    <img class="Burgers" src="Resources/Images/burguer3.png" alt="Burger#3">
+                    <p class="Name">Carne</p>
+                    <p class="Price">$11.90</p>
+                    <a href="Menu.html" class="menu_button_best menu_button_best2">Ordenar ahora</a>
+                </td>
+                <td class="MostSold">
+                    <img class="Burgers" src="Resources/Images/burguer1.png" alt="Burger#1">
+                    <p class="Name">Mixta</p>
+                    <p class="Price">$11.90</p>
+                    <a href="Menu.html" class="menu_button_best menu_button_best2">Ordenar ahora</a>
+                </td>
+                <td class="MostSold2">
+                    <img class="Burgers" src="Resources/Images/burguer2.png" alt="Burger#2">
+                    <p class="Name">Pollo</p>
+                    <p class="Price">$11.90</p>
+                    <a href="Menu.html" class="menu_button_best menu_button_best2">Ordenar ahora</a>
+                </td>
+            </tr>
+        </table>
+        <table class="menubutton"><tr><td><a href="Menu.html" class="menu_button_lower">VER MENÚ HOY</a></td></tr></table>
+        <div class="BottomTriangle2"></div>               
     </div>
 </body>
 </html>
