Second Menu Tab Full Funtional

--- a/index.html
+++ b/index.html
@@ -150,18 +150,126 @@
                 </tr>
             </table>
             <div id="TODOS" class="tabcontent" style="display: block;">
-                <h3>London</h3>
-                <p>London is the capital city of England.</p>
+                <table class="MostSold">
+                    <tr>
+                        <td class="menu2">
+                            <img class="SecondMenu" src="Resources/Images/hamburguesa1.jpg" alt="TodosBurger#1">
+                            <div class="Top_p_left"><p class="Name2">hamburguesa de pollo</p></div>
+                            <div class="Top_p_right"><p class="RedPrice">$12.00</p></div>
+                        </td>
+                        <td class="menu2">
+                            <img class="SecondMenu" src="Resources/Images/hamburguesa2.jpg" alt="TodosBurger#1">
+                            <div class="Top_p_left"><p class="Name2">hamburguesa carne</p></div>
+                            <div class="Top_p_right"><p class="RedPrice">$20.00</p></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="menu2">
+                            <img class="SecondMenu" src="Resources/Images/hamburguesa3.jpg" alt="TodosBurger#1">
+                            <div class="Top_p_left"><p class="Name2">hamburguesa carne</p></div>
+                            <div class="Top_p_right"><p class="RedPrice">$12.00</p></div>
+                        </td>
+                        <td class="menu2">
+                            <img class="SecondMenu" src="Resources/Images/hamburguesa4.jpg" alt="TodosBurger#1">
+                            <div class="Top_p_left"><p class="Name2">hamburguesa mixta</p></div>
+                            <div class="Top_p_right"><p class="RedPrice">$6.00</p></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="menu2">
+                            <img class="SecondMenu" src="Resources/Images/hamburguesa5.jpg" alt="TodosBurger#1">
+                            <div class="Top_p_left"><p class="Name2">hamburguesa de todito</p></div>
+                            <div class="Top_p_right"><p class="RedPrice">$12.00</p></div>
+                        </td>
+                        <td class="menu2">
+                            <img class="SecondMenu" src="Resources/Images/hamburguesa6.jpg" alt="TodosBurger#1">
+                            <div class="Top_p_left"><p class="Name2">hamburguesa pollo</p></div>
+                            <div class="Top_p_right"><p class="RedPrice">$20.00</p></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="menu2">
+                            <img class="SecondMenu" src="Resources/Images/hamburguesa7.jpg" alt="TodosBurger#1">
+                            <div class="Top_p_left"><p class="Name2">hamburguesa de todito</p></div>
+                            <div class="Top_p_right"><p class="RedPrice">$12.00</p></div>
+                        </td>
+                        <td class="menu2">
+                            <img class="SecondMenu" src="Resources/Images/hamburguesa8.jpg" alt="TodosBurger#1">
+                            <div class="Top_p_left"><p class="Name2">hamburguesa carne</p></div>
+                            <div class="Top_p_right"><p class="RedPrice">$6.00</p></div>
+                        </td>
+                    </tr>
+                </table>
             </div>
             
             <div id="Pollo" class="tabcontent">
-                <h3>Paris</h3>
-                <p>Paris is the capital of France.</p> 
+                <table class="MostSold">
+                    <tr>
+                        <td class="menu2">
+                            <img class="SecondMenu" src="Resources/Images/hamburguesa1.jpg" alt="TodosBurger#1">
+                            <div class="Top_p_left"><p class="Name2">hamburguesa de pollo</p></div>
+                            <div class="Top_p_right"><p class="RedPrice">$12.00</p></div>
+                        </td>
+                        <td class="menu2">
+                            <img class="SecondMenu" src="Resources/Images/hamburguesa6.jpg" alt="TodosBurger#1">
+                            <div class="Top_p_left"><p class="Name2">hamburguesa pollo</p></div>
+                            <div class="Top_p_right"><p class="RedPrice">$20.00</p></div>
+                        </td>
+                    </tr>
+                </table> 
             </div>
             
             <div id="Carne" class="tabcontent">
-                <h3>Tokyo</h3>
-                <p>Tokyo is the capital of Japan.</p>
+                <table class="MostSold">
+                    <tr>
+                        <td class="menu2">
+                            <img class="SecondMenu" src="Resources/Images/hamburguesa2.jpg" alt="TodosBurger#1">
+                            <div class="Top_p_left"><p class="Name2">hamburguesa carne</p></div>
+                            <div class="Top_p_right"><p class="RedPrice">$20.00</p></div>
+                        </td>
+                        <td class="menu2">
+                            <img class="SecondMenu" src="Resources/Images/hamburguesa3.jpg" alt="TodosBurger#1">
+                            <div class="Top_p_left"><p class="Name2">hamburguesa carne</p></div>
+                            <div class="Top_p_right"><p class="RedPrice">$12.00</p></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="menu2">
+                            <img class="SecondMenu" src="Resources/Images/hamburguesa8.jpg" alt="TodosBurger#1">
+                            <div class="Top_p_left"><p class="Name2">hamburguesa carne</p></div>
+                            <div class="Top_p_right"><p class="RedPrice">$6.00</p></div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+
+            <div id="Mixta" class="tabcontent">
+                <table class="MostSold">
+                    <tr>
+                        <td class="menu2">
+                            <img class="SecondMenu" src="Resources/Images/hamburguesa4.jpg" alt="TodosBurger#1">
+                            <div class="Top_p_left"><p class="Name2">hamburguesa mixta</p></div>
+                            <div class="Top_p_right"><p class="RedPrice">$6.00</p></div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+
+            <div id="De Todito" class="tabcontent">
+                <table class="MostSold">
+                    <tr>
+                        <td class="menu2">
+                            <img class="SecondMenu" src="Resources/Images/hamburguesa5.jpg" alt="TodosBurger#1">
+                            <div class="Top_p_left"><p class="Name2">hamburguesa de todito</p></div>
+                            <div class="Top_p_right"><p class="RedPrice">$12.00</p></div>
+                        </td>
+                        <td class="menu2">
+                            <img class="SecondMenu" src="Resources/Images/hamburguesa7.jpg" alt="TodosBurger#1">
+                            <div class="Top_p_left"><p class="Name2">hamburguesa de todito</p></div>
+                            <div class="Top_p_right"><p class="RedPrice">$12.00</p></div>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
