Second Menu Finished
- Just need the footer and finished with this page

--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
                 </table>
             </div>
         </div>
+    <table class="menubutton"><tr><td><a href="Menu.html" class="menu_button_lowerest">VER MENÚ HOY</a></td></tr></table>
     </div>
 </body>
 </html>
