--- a/index.html
+++ b/index.html
@@ -274,5 +274,45 @@
         </div>
     <table class="menubutton"><tr><td><a href="Menu.html" class="menu_button_lowerest">VER MENÚ HOY</a></td></tr></table>
     </div>
+    <div class="Footer">
+        <div class="TopTriangle2"></div>
+        <table class="Footer">
+            <tr>
+                <td>
+                    <img class="Ibra2" src="Resources/Images/5.png" alt="Ibra's Logo">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p class="Green">
+                        Habla a:
+                    </p>
+                    <p class="White">
+                        Av. Intercomunal, sectro la Mora, calle 8
+                    </p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p class="Green">
+                        Telefono:
+                    </p>
+                    <p class="White">
+                        +58 251 261 00 01
+                    </p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p class="Green">
+                        Correo:
+                    </p>
+                    <p class="White">
+                        yourmail@gmail.com
+                    </p>
+                </td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
