Added media symbols to footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="Resources/CSS/ciudad.css">
     <link rel="stylesheet" type="text/css" href="Resources/CSS/index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css"  rel="stylesheet"  type='text/css'>
 
     <script>
         function openMenu(evt, foodName) {
@@ -310,6 +311,11 @@
                     <p class="White">
                         yourmail@gmail.com
                     </p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p><i class="fa fa-pinterest white" aria-hidden="true"></i> <i class="fa fa-facebook-f white"></i> <i class="fa fa-twitter white"></i> <i class="fa fa-dribbble white"></i> <i class="fa fa-linkedin-square white"></i> <i class="fa fa-vimeo-square white"></i></p>
                 </td>
             </tr>
         </table>
