Header Page Done

--- a/index.html
+++ b/index.html
@@ -318,6 +318,11 @@
                     <p><i class="fa fa-pinterest white" aria-hidden="true"></i> <i class="fa fa-facebook-f white"></i> <i class="fa fa-twitter white"></i> <i class="fa fa-dribbble white"></i> <i class="fa fa-linkedin-square white"></i> <i class="fa fa-vimeo-square white"></i></p>
                 </td>
             </tr>
+            <tr>
+                <td class="td_padding">
+                    <p class="White">Copyright &#169 2020 Todos los derechos reservados | Este sitio esta hecho con &#9829 por DiazApps</p>
+                </td>
+            </tr>
         </table>
     </div>
 </body>
