Added First part of content section

--- a/Contact.html
+++ b/Contact.html
@@ -21,11 +21,11 @@
                         <td><img class="Ibra" src="Resources/Images/5.png" alt="Ibra's Logo"></td>
                         <td>
                             <nav class="head">
-                                <li><a class="current" href="index.html">INICIO</a></li>
+                                <li><a href="index.html">INICIO</a></li>
                                 <li><a href="AboutUs.html">SOBRE NOSOTROS</a></li>
                                 <li><a href="Menu.html">MENU</a></li>
                                 <li><a href="">BLOG</a></li>
-                                <li><a href="Contact.html">CONTACTO</a></li>
+                                <li><a class="current" href="Contact.html">CONTACTO</a></li>
                                 <li><a href="">REGISTRO</a></li>
                                 <li><a href="">INICIAR SESSION</a></li>
                             </nav>
@@ -35,11 +35,20 @@
         </header>
         <div class="TopTriangle">
         </div>  
-        <p class="top">LAS MEJORES DE LA CIUDAD</p>
+        <p class="top">DI HOLA</p>
         
-        <h1>Hamburguesas</h1>
-        <table class="menubutton"><tr><td><a href="Menu.html" class="menu_button">VER MENÚ HOY</a></td></tr></table>
-        <div class="BottomTriangle"></div>               
+        <h1>Contacto</h1>
+        <div class="BottomTriangle"></div>  
+        <div class="Contact">
+            <img class="TinyBurger" src="Resources/Images/Burguer.png" alt="Tiny Burger">
+            <h1>Di hola</h1>
+            <p class="WhiteBig">
+                Di hola, envíanos un mensaje
+            </p>
+            <p class="White">
+                Envianos tus comentarios y suguerencias ustedes son importante para nosotros
+            </p>
+        </div>            
     </div>
 </body>
 </html>
