--- a/Contact.html
+++ b/Contact.html
@@ -48,7 +48,66 @@
             <p class="White">
                 Envianos tus comentarios y suguerencias ustedes son importante para nosotros
             </p>
+            <form class="contact" action="/ContactResponsePage" method="post">
+                <label style="padding-right: 20px;">
+                <input class="field_sizes1" type="text" id="fname" name="fname" placeholder="Name" size="75">
+                </label>    
+                <input class="field_sizes1" type="text" id="lname" name="lname" placeholder="Email" size="75"><br>
+                <input class="field_sizes1" type="text" id="lname" name="lname" placeholder="Subject" size="158"><br>
+                <textarea name="Text1" cols="142" rows="10" placeholder="Message"></textarea><br>
+                <input type="submit" value="ENVIAR MENSAJE" class="menu_button">
+              </form> 
         </div>            
+    </div>
+    <div class="Footer">
+        <div class="TopTriangle2"></div>
+        <table class="Footer">
+            <tr>
+                <td>
+                    <img class="Ibra2" src="Resources/Images/5.png" alt="Ibra's Logo">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p class="Green">
+                        Habla a:
+                    </p>
+                    <p class="White">
+                        Av. Intercomunal, sectro la Mora, calle 8
+                    </p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p class="Green">
+                        Telefono:
+                    </p>
+                    <p class="White">
+                        +58 251 261 00 01
+                    </p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p class="Green">
+                        Correo:
+                    </p>
+                    <p class="White">
+                        yourmail@gmail.com
+                    </p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p><i class="fa fa-pinterest white" aria-hidden="true"></i> <i class="fa fa-facebook-f white"></i> <i class="fa fa-twitter white"></i> <i class="fa fa-dribbble white"></i> <i class="fa fa-linkedin-square white"></i> <i class="fa fa-vimeo-square white"></i></p>
+                </td>
+            </tr>
+            <tr>
+                <td class="td_padding">
+                    <p class="White">Copyright &#169 2020 Todos los derechos reservados | Este sitio esta hecho con &#9829 por DiazApps</p>
+                </td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
