Css and changes

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -87,7 +87,7 @@
          <div class="TopTriangle2"></div>
          <table class="Footer">
             <img class="TinyBurger" src="Resources/Images/Burguer.png" alt="Tiny Burger">
-            <h2 class="MostSold">Somos Ibra</h2>
+            <h2 class="MostSold">Lo que dicen los clientes</h2>
             <tr>
                <td class="MostSold" width="33%">
                   <h4>Las Mejores Hamburguesas</h4>
