Added the changes

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -29,6 +29,8 @@
          </header>
          <div class="TopTriangle">
          </div>
+		 <p class="top">LAS MEJORES DE LA CIUDAD</p>
+         <h2>Sobre nuestras Hamburguesas</h2>
          <div class="BottomTriangle">
          </div>
          <div class="Menu">
