--- a/AboutUs.html
+++ b/AboutUs.html
@@ -18,10 +18,10 @@
                         <li><a href="index.html">INICIO</a></li>
                         <li><a class="current" href="AboutUs.html">SOBRE NOSOTROS</a></li>
                         <li><a href="Menu.html">MENU</a></li>
-                        <li><a href="">BLOG</a></li>
+                        <li><a href="http://djj3612.uta.cloud/Jaime-Manukonda_ciudad/Blog.html/">BLOG</a></li>
                         <li><a href="Contact.html">CONTACTO</a></li>
-                        <li><a href="">REGISTRO</a></li>
-                        <li><a href="">INICIAR SESSION</a></li>
+                        <li><a href="javascript:void(0);" onclick="document.getElementById('id01').style.display='block'">REGISTRO</a></li>
+                        <li><a href="javascript:void(0);" onclick="document.getElementById('id02').style.display='block'">INICIAR SESSION</a></li>
                      </nav>
                   </td>
                </tr>
